--- a/Sass/program.scss
+++ b/Sass/program.scss
@@ -1,3 +1,13 @@
+*{
+    box-sizing: border-box;
+    margin: 0;
+    padding: 0;
+}
+img{
+    max-width: 100%;
+    height: auto;
+    object-fit: contain;
+}
 .grid__container {
   // margin-left: auto;
   // margin-right: auto;
@@ -133,7 +143,7 @@
 
     .method {
       margin-bottom: -120px;
-      width: 100vw;
+      width: 100%;
       position: relative;
       left: 50%;
       right: 50%;
@@ -254,184 +264,203 @@
           top: -162px;
           padding: 0 60% 0 0;
           position: absolute;
-        //   margin-left: -10%;
+          //   margin-left: -10%;
         }
+        
         .lessons__wrap {
-          position: relative;
-          display: flex;
-          justify-content: center;
-          align-items: center;
-          overflow: hidden;
-          gap: 25px;
-          .slick-prev,
-          .slick-next {
-            width: 50px;
-            height: 50px;
-            border-radius: 50%;
-            border: none;
-            position: absolute;
-            top: calc(50% - 25px);
-            background-color: #092f46;
-            .fa-arrow-left, 
-            .fa-arrow-right{
+            width: 90%;
+            margin-left: auto;
+            margin-right: auto;
+            .slick-pre,
+            .slick-next {
+              width: 50px;
+              height: 50px;
+              border-radius: 50%;
+              border: none;
+              position: absolute;
+              top: calc(50% - 25px);
+              background-color: #092f46;
+              .fa-arrow-left,
+              .fa-arrow-right {
                 color: #fff;
+              }
+              z-index: 1;
             }
-          }
+  
+            .slick-pre {
+              left: 10px;
+            }
+            .slick-next {
+              right: 10px;
+            }
+  
+            .slick-pre:hover,
+            .slick-next:hover {
+              cursor: pointer;
+              background-color: #b11116;
+              box-shadow: 1px 0px 28px -2px rgba(177, 17, 22, 0.75);
+              -webkit-box-shadow: 1px 0px 28px -2px rgba(177, 17, 22, 0.75);
+              -moz-box-shadow: 1px 0px 28px -2px rgba(177, 17, 22, 0.75);
+            }
+            .slick-list{
+                width: 100%;
+                
+                .slick-track{
+                    width: 100%;
+                .lesson + .lesson{
+                    margin-right: 20px;
+                }
+                    .lesson {
+                      display: flex;
+                      justify-content: center;
+                      align-items: center;
+                      flex-direction: column;
+                      width: 18rem;
+                      height: 28rem;
+                      background-color: #fff;
+                      border: solid 0.001px #d2d1d1;
+                      border-radius: 20px;
+                      padding: 42px 44px 38px 34px;
+                      gap: 40px;
+                    }
 
-          .slick-prev {
-            left: 10px;
-          }
-          .slick-next {
-            right: 10px;
-          }
-          .lesson {
-            display: flex;
-            justify-content: center;
-            align-items: center;
-            flex-direction: column;
-            width: 18rem;
-            height: 28rem;
-            background-color: #fff;
-            border: solid 0.001px #d2d1d1 ;
-            border-radius: 20px;
-            padding: 42px 44px 38px 34px;
-            gap: 40px;
-          }
+                }
+            }
         }
       }
     }
 
     .main__system {
-        width: 100%;
-        background-color: #f1f4f4 !important;
-        padding: 50px 100px;
-        .main__system__container{
-            padding-top: 45px;
-            h1 {
-              margin-bottom: 20px;
-            }
-            // :not(h1){
-            //   display: flex;
-            //   flex-direction: row;
-            // }
-            h1 {
-              text-align: center;
-            }
-      
-            .box__system {
+      width: 100%;
+      background-color: #f1f4f4 !important;
+      padding: 50px 100px;
+      .main__system__container {
+        padding-top: 45px;
+        h1 {
+          margin-bottom: 20px;
+        }
+        // :not(h1){
+        //   display: flex;
+        //   flex-direction: row;
+        // }
+        h1 {
+          text-align: center;
+        }
+
+        .box__system {
+          display: flex;
+          background-color: #fff;
+          border-radius: 50px;
+          overflow: hidden;
+          // h1{
+          //   text-align: center;
+          // }
+          // :not(h1){
+          //   flex-direction: row;
+          // }
+          .info__nav {
+            display: flex;
+            flex-wrap: wrap;
+            flex-direction: column;
+            gap: 20px;
+            padding-top: 16px;
+            background-color: #fff;
+            // border: solid 1px red;
+
+            .box__select {
               display: flex;
-              background-color: #fff;
-              border-radius: 50px;
-              overflow: hidden;
-              // h1{
-              //   text-align: center;
-              // }
-              // :not(h1){
-              //   flex-direction: row;
-              // }
-              .info__nav {
+              justify-content: center;
+              align-items: center;
+              gap: 10px;
+
+              select {
                 display: flex;
-                flex-wrap: wrap;
+                align-items: center;
+                justify-content: center;
+                border: solid 1px #686876;
+                border-radius: 60px;
+                color: #686876;
+                padding: 13px 50px 13px 47px;
+              }
+            }
+
+            .result__container__all {
+              display: flex;
+              flex-direction: column;
+              overflow-y: scroll;
+              height: 495px;
+
+              gap: 12px;
+
+              .result__container {
+                display: flex;
                 flex-direction: column;
-                gap: 20px;
-                padding-top: 16px;
-                background-color: #fff;
-                // border: solid 1px red;
-      
-                .box__select {
+                // font-size: 10px;
+                border-radius: 10px;
+                border: solid 1px #c3c3c3ab;
+                height: 100%;
+                width: 100%;
+                position: relative;
+                padding: 25px 77px 25px 27px;
+                // align-self: flex-start;
+
+                .result__box {
+                  gap: 25px;
                   display: flex;
-                  justify-content: center;
-                  align-items: center;
-                  gap: 10px;
-      
-                  select {
+                  flex-wrap: wrap;
+                  flex-direction: column;
+                  position: relative;
+                  // width: 100%;
+                  // height: 25%;
+                  // text-align: justify;
+
+                  .location {
                     display: flex;
                     align-items: center;
-                    justify-content: center;
-                    border: solid 1px #686876;
-                    border-radius: 60px;
-                    color: #686876;
-                    padding: 13px 50px 13px 47px;
+                    gap: 10px;
                   }
-                }
-      
-                .result__container__all {
-                  display: flex;
-                  flex-direction: column;
-                  overflow-y: scroll;
-                  height: 495px;
-                  
-                  gap: 12px;
-      
-                  .result__container {
+                  .phone {
                     display: flex;
-                    flex-direction: column;
-                    // font-size: 10px;
-                    border-radius: 10px;
-                    border: solid 1px #c3c3c3ab;
-                    height: 100%;
-                    width: 100%;
-                    position: relative;
-                    padding: 25px 77px 25px 27px;
-                    // align-self: flex-start;
-      
-                    .result__box {
-                      gap: 25px;
-                      display: flex;
-                      flex-wrap: wrap;
-                      flex-direction: column;
-                      position: relative;
-                      // width: 100%;
-                      // height: 25%;
-                      // text-align: justify;
-      
-                      .location {
-                        display: flex;
-                        align-items: center;
-                        gap: 10px;
-                      }
-                      .phone {
-                        display: flex;
-                        align-items: center;
-                        gap: 10px;
-                      }
-                      .map__view {
-                        display: flex;
-                        align-items: center;
-                        gap: 10px;
-                        border: solid 1px red;
-                        border-radius: 60px;
-                        text-align: center;
-                        justify-content: center;
-                        width: 169px;
-                        height: 35px;
-                        color: red;
-                      }
-                      .arrow__btn {
-                        position: absolute;
-                        display: flex;
-                        border: solid 1px #686876;
-                        width: 40px;
-                        height: 40px;
-                        border-radius: 50%;
-                        align-items: center;
-                        justify-content: center;
-                        right: -60px;
-                        top: 90px;
-                        color: #686876;
-                      }
-                    }
+                    align-items: center;
+                    gap: 10px;
                   }
-                  .result__container:hover {
-                    cursor: pointer;
-                    box-shadow: 0px 0px 20px -1px rgba(0, 0, 0, 0.63);
-                    -webkit-box-shadow: 0px 0px 20px -1px rgba(0, 0, 0, 0.63);
-                    -moz-box-shadow: 0px 0px 20px -1px rgba(0, 0, 0, 0.63);
+                  .map__view {
+                    display: flex;
+                    align-items: center;
+                    gap: 10px;
+                    border: solid 1px red;
+                    border-radius: 60px;
+                    text-align: center;
+                    justify-content: center;
+                    width: 169px;
+                    height: 35px;
+                    color: red;
+                  }
+                  .arrow__btn {
+                    position: absolute;
+                    display: flex;
+                    border: solid 1px #686876;
+                    width: 40px;
+                    height: 40px;
+                    border-radius: 50%;
+                    align-items: center;
+                    justify-content: center;
+                    right: -60px;
+                    top: 90px;
+                    color: #686876;
                   }
                 }
               }
+              .result__container:hover {
+                cursor: pointer;
+                box-shadow: 0px 0px 20px -1px rgba(0, 0, 0, 0.63);
+                -webkit-box-shadow: 0px 0px 20px -1px rgba(0, 0, 0, 0.63);
+                -moz-box-shadow: 0px 0px 20px -1px rgba(0, 0, 0, 0.63);
+              }
             }
+          }
         }
+      }
     }
   }
 }
@@ -468,11 +497,11 @@
         }
       }
 
-      .lessons{
-        .lessons__container{
-            h2{
-                left: 12px;
-            }
+      .lessons {
+        .lessons__container {
+          h2 {
+            left: 12px;
+          }
         }
       }
 
@@ -687,6 +716,18 @@
         }
       }
 
+      .lessons{
+        .lessons__container{
+            
+            .lessons__wrap{
+                width: 100%;
+            margin-left: 0;
+            margin-right: 0;
+            }
+
+        }
+      }
+
       .main__system {
         padding: 0;
         .box__system {
@@ -758,13 +799,13 @@
         padding: 27% 0 145px;
       }
 
-      .lessons{
-        .lessons__container{
-            h2{
-                left: 12px;
-                padding: 0 40% 0 0;
-                font-size: 1.5rem;
-            }
+      .lessons {
+        .lessons__container {
+          h2 {
+            left: 12px;
+            padding: 0 40% 0 0;
+            font-size: 1.5rem;
+          }
         }
       }
     }
