--- a/css/program.css
+++ b/css/program.css
@@ -1,3 +1,15 @@
+* {
+  box-sizing: border-box;
+  margin: 0;
+  padding: 0;
+}
+
+img {
+  max-width: 100%;
+  height: auto;
+  object-fit: contain;
+}
+
 .grid__container .site__content .banner .banner__wrap img {
   width: 100%;
 }
@@ -102,7 +114,7 @@
 }
 .grid__container .site__content .method {
   margin-bottom: -120px;
-  width: 100vw;
+  width: 100%;
   position: relative;
   left: 50%;
   right: 50%;
@@ -211,14 +223,11 @@
   position: absolute;
 }
 .grid__container .site__content .lessons .lessons__container .lessons__wrap {
-  position: relative;
-  display: flex;
-  justify-content: center;
-  align-items: center;
-  overflow: hidden;
-  gap: 25px;
+  width: 90%;
+  margin-left: auto;
+  margin-right: auto;
 }
-.grid__container .site__content .lessons .lessons__container .lessons__wrap .slick-prev,
+.grid__container .site__content .lessons .lessons__container .lessons__wrap .slick-pre,
 .grid__container .site__content .lessons .lessons__container .lessons__wrap .slick-next {
   width: 50px;
   height: 50px;
@@ -227,20 +236,38 @@
   position: absolute;
   top: calc(50% - 25px);
   background-color: #092f46;
+  z-index: 1;
 }
-.grid__container .site__content .lessons .lessons__container .lessons__wrap .slick-prev .fa-arrow-left,
-.grid__container .site__content .lessons .lessons__container .lessons__wrap .slick-prev .fa-arrow-right,
+.grid__container .site__content .lessons .lessons__container .lessons__wrap .slick-pre .fa-arrow-left,
+.grid__container .site__content .lessons .lessons__container .lessons__wrap .slick-pre .fa-arrow-right,
 .grid__container .site__content .lessons .lessons__container .lessons__wrap .slick-next .fa-arrow-left,
 .grid__container .site__content .lessons .lessons__container .lessons__wrap .slick-next .fa-arrow-right {
   color: #fff;
 }
-.grid__container .site__content .lessons .lessons__container .lessons__wrap .slick-prev {
+.grid__container .site__content .lessons .lessons__container .lessons__wrap .slick-pre {
   left: 10px;
 }
 .grid__container .site__content .lessons .lessons__container .lessons__wrap .slick-next {
   right: 10px;
 }
-.grid__container .site__content .lessons .lessons__container .lessons__wrap .lesson {
+.grid__container .site__content .lessons .lessons__container .lessons__wrap .slick-pre:hover,
+.grid__container .site__content .lessons .lessons__container .lessons__wrap .slick-next:hover {
+  cursor: pointer;
+  background-color: #b11116;
+  box-shadow: 1px 0px 28px -2px rgba(177, 17, 22, 0.75);
+  -webkit-box-shadow: 1px 0px 28px -2px rgba(177, 17, 22, 0.75);
+  -moz-box-shadow: 1px 0px 28px -2px rgba(177, 17, 22, 0.75);
+}
+.grid__container .site__content .lessons .lessons__container .lessons__wrap .slick-list {
+  width: 100%;
+}
+.grid__container .site__content .lessons .lessons__container .lessons__wrap .slick-list .slick-track {
+  width: 100%;
+}
+.grid__container .site__content .lessons .lessons__container .lessons__wrap .slick-list .slick-track .lesson + .lesson {
+  margin-right: 20px;
+}
+.grid__container .site__content .lessons .lessons__container .lessons__wrap .slick-list .slick-track .lesson {
   display: flex;
   justify-content: center;
   align-items: center;
@@ -467,6 +494,11 @@
   }
   .grid__container .site__content .duration .dur__container .dur__item__wrap .dur__item {
     width: 25rem;
+  }
+  .grid__container .site__content .lessons .lessons__container .lessons__wrap {
+    width: 100%;
+    margin-left: 0;
+    margin-right: 0;
   }
   .grid__container .site__content .main__system {
     padding: 0;
