--- a/css/recruitment.css
+++ b/css/recruitment.css
@@ -1,3 +1,12 @@
+@charset "UTF-8";
+@import url("https://fonts.googleapis.com/css2?family=Roboto:ital,wght@0,100;0,300;0,400;0,500;0,700;0,900;1,100;1,300;1,400;1,500;1,700;1,900&display=swap");
+* {
+  margin: 0;
+  padding: 0;
+  box-sizing: border-box;
+  font-family: Roboto, sans-serif;
+}
+
 .banner {
   display: flex;
   width: 100%;
@@ -98,71 +107,290 @@
 
 .benefit {
   width: 100%;
-  height: auto;
+  padding: 140px 0 120px;
   background-image: url(https://mathnasium.edu.vn/wp-content/uploads/2022/11/Group-18857-1.png);
 }
 .benefit .benefit__container {
   max-width: 1200px;
+  height: 100%;
   margin-left: auto;
   margin-right: auto;
   padding: 0 10px;
   display: flex;
+  align-items: center;
 }
 .benefit .benefit__container .benefit__content {
   width: 50%;
   height: 100%;
+  text-align: start;
+}
+.benefit .benefit__container .benefit__content h2 {
+  font-size: 40px;
+  text-transform: uppercase;
+  line-height: 1.3;
+  color: #fff;
 }
 .benefit .benefit__container .benefit__carousel {
   width: 50%;
   height: 100%;
 }
+.benefit .benefit__container .benefit__carousel .slick-list {
+  padding-left: 190px;
+  width: 100%;
+  overflow-x: visible;
+}
+.benefit .benefit__container .benefit__carousel .slick-list .slick-track {
+  overflow-x: visible;
+}
+.benefit .benefit__container .benefit__carousel .slick-list .slick-track .benefit__carousel--item {
+  width: 100% !important;
+  width: 100%;
+  height: 130px;
+  margin-bottom: 5px;
+  color: rgba(255, 255, 255, 0.5019607843);
+}
+.benefit .benefit__container .benefit__carousel .slick-list .slick-track .benefit__carousel--item h4 {
+  position: relative;
+  font-size: 20px;
+  margin-bottom: 5px;
+  text-transform: uppercase;
+}
+.benefit .benefit__container .benefit__carousel .slick-list .slick-track .benefit__carousel--item h4::after {
+  content: "";
+  position: absolute;
+  width: 20px;
+  height: 20px;
+  left: -70px;
+  top: 30px;
+  border-radius: 50%;
+  background-color: rgba(255, 255, 255, 0.5019607843);
+  z-index: 100;
+}
+.benefit .benefit__container .benefit__carousel .slick-list .slick-track .benefit__carousel--item h4::before {
+  content: "";
+  position: absolute;
+  width: 40px;
+  height: 40px;
+  left: -60px;
+  border-radius: 50%;
+  background-color: transparent;
+  border: 1px solid rgba(255, 255, 255, 0.5019607843);
+  z-index: 100;
+  top: 40px;
+  transform: translate(-50%, -50%);
+}
+.benefit .benefit__container .benefit__carousel .slick-list .slick-track .benefit__carousel--item p {
+  font-size: 14px;
+  line-height: 1.5;
+}
+.benefit .benefit__container .benefit__carousel .slick-list .slick-track .slick-current {
+  color: #fff;
+}
+.benefit .benefit__container .benefit__carousel .slick-list .slick-track .slick-current h4::before {
+  border: 1px solid #fff;
+}
+.benefit .benefit__container .benefit__carousel .slick-list .slick-track .slick-current h4::after {
+  background: #fff;
+}
 
 .job {
-  display: flex;
-  flex-direction: column;
-  align-items: center;
+  width: 100%;
+  height: auto;
+  padding: 50px 0 100px;
 }
-.job h2 {
+.job .jon-container {
+  margin-left: auto;
+  margin-right: auto;
+  padding: 0 10px;
+  max-width: 1200px;
+}
+.job .jon-container .box__content {
+  width: 100%;
   text-align: center;
-  font-size: 40px;
-  margin-bottom: 40px;
 }
-.job .table__td thead {
+.job .jon-container .box__content h2 {
+  font-size: 30px;
+  margin-bottom: 30px;
+}
+.job .jon-container .box__table {
+  width: 100%;
+  height: fit-content;
+}
+.job .jon-container .box__table table {
+  width: 100%;
+}
+.job .jon-container .box__table table thead {
+  text-align: center;
+}
+.job .jon-container .box__table table thead tr th {
   background: #ed1c24;
   color: #ffffff;
-}
-.job .table__td thead th {
-  text-align: center;
   font-weight: 700;
   padding-bottom: 17px;
   padding-top: 17px;
-  border: none;
+  font-size: 15px;
 }
-.job .table__td thead th:not(:last-child) {
-  border-right: 1px solid rgba(235, 235, 235, 0.2);
-}
-.job .table__td thead th:nth-child(1) {
+.job .jon-container .box__table table thead tr th:nth-child(1) {
   border-radius: 10px 0 0 0;
   width: 10%;
 }
-.job .table__td thead th:nth-child(2) {
+.job .jon-container .box__table table thead tr th:nth-child(2) {
   width: 20%;
 }
-.job .table__td tbody tr:nth-child(odd) {
-  background: rgba(175, 174, 175, 0.1);
+.job .jon-container .box__table table thead tr th:not(:last-child) {
+  border-right: 1px solid rgba(235, 235, 235, 0.2);
 }
-.job .table__td tbody td {
-  padding: 25px 20px;
-  border: 1px solid white;
+.job .jon-container .box__table table tbody tr {
   text-align: center;
 }
-.job .table__td tbody td:nth-child(3) a {
-  padding: 0 30px;
+.job .jon-container .box__table table tbody tr td {
+  position: relative;
+  color: #333333;
+  padding: 25px 20px;
+  font-size: 15px;
+  font-weight: 400;
+  line-height: 20px;
+  text-align: center;
+}
+.job .jon-container .box__table table tbody tr td:nth-child(1) {
+  width: 10%;
+  font-weight: 700;
+  font-size: 25px;
+}
+.job .jon-container .box__table table tbody tr td:nth-child(2) {
+  cursor: pointer;
+  text-align: start;
+  width: 20%;
+}
+.job .jon-container .box__table table tbody tr td:nth-child(3) a {
+  color: red;
   line-height: 45px;
   min-width: 130px;
-  display: inline-block;
-  border: 1px solid #ed1c24;
-  border-radius: 100px;
-  height: 46px;
-  color: #ed1c24;
+  padding: 10px 30px;
+  border: 1px solid red;
+  border-radius: 30px;
+}
+.job .jon-container .box__table table tbody tr td:nth-child(4) {
+  font-size: 20px;
+}
+.job .jon-container .box__table table tbody tr:hover {
+  box-shadow: rgba(0, 0, 0, 0.35) 0px 5px 15px;
+}
+
+@media screen and (max-width: 1023px) {
+  main .benefit .benefit__container {
+    max-width: 860px;
+  }
+  main .benefit .benefit__container .benefit__content h2 {
+    font-size: 30px;
+  }
+  main .benefit .benefit__container .benefit__carousel .slick-list {
+    padding-left: 90px;
+  }
+  main .benefit .benefit__container .benefit__carousel .slick-list .slick-track .benefit__carousel--item {
+    height: 140px;
+  }
+  main .benefit .benefit__container .benefit__carousel .slick-list .slick-track .benefit__carousel--item h4 {
+    font-size: 25px;
+  }
+  main .job .jon-container {
+    max-width: 960px;
+  }
+  main .job .jon-container .box__content h2 {
+    font-size: 25px;
+  }
+  main .job .jon-container .box__table table thead {
+    display: none;
+  }
+  main .job .jon-container .box__table table tbody tr {
+    display: flex;
+    flex-direction: column;
+  }
+  main .job .jon-container .box__table table tbody tr td {
+    width: 100% !important;
+    padding-left: 40% !important;
+  }
+  main .job .jon-container .box__table table tbody tr td:nth-child(2) {
+    cursor: pointer;
+    text-align: center;
+  }
+  main .job .jon-container .box__table table tbody tr td:nth-child(1):before {
+    position: absolute;
+    content: "STT";
+    left: 40px;
+  }
+  main .job .jon-container .box__table table tbody tr td:nth-child(2):before {
+    position: absolute;
+    content: "Vị trí tuyển dụng";
+    left: 40px;
+    text-transform: uppercase;
+  }
+  main .job .jon-container .box__table table tbody tr td:nth-child(3):before {
+    position: absolute;
+    content: "Đăng tuyển";
+    left: 40px;
+    text-transform: uppercase;
+  }
+  main .job .jon-container .box__table table tbody tr td:nth-child(4):before {
+    position: absolute;
+    content: "nơi làm việc";
+    left: 40px;
+    text-transform: uppercase;
+  }
+  main .job .jon-container .box__table table tbody tr td:nth-child(5):before {
+    position: absolute;
+    content: "ngày hết hạn";
+    left: 40px;
+    text-transform: uppercase;
+  }
+}
+@media screen and (max-width: 790px) {
+  main .benefit {
+    padding: 30px 0 50px;
+  }
+  main .benefit .benefit__container {
+    width: 100%;
+    flex-direction: column;
+  }
+  main .benefit .benefit__container .benefit__content {
+    width: 100%;
+    text-align: center;
+    margin-bottom: 50px;
+  }
+  main .benefit .benefit__container .benefit__content h2 {
+    font-size: 25px;
+  }
+  main .benefit .benefit__container .benefit__carousel {
+    width: 100%;
+  }
+  main .benefit .benefit__container .benefit__carousel .slick-list {
+    width: 100%;
+  }
+  main .benefit .benefit__container .benefit__carousel .slick-list .slick-track {
+    width: 100%;
+  }
+  main .benefit .benefit__container .benefit__carousel .slick-list .slick-track .benefit__carousel--item {
+    width: 100%;
+    height: 120px;
+  }
+  main .benefit .benefit__container .benefit__carousel .slick-list .slick-track .benefit__carousel--item h4 {
+    font-size: 20px;
+  }
+  main .job .jon-container .box__content h2 {
+    font-size: 25px;
+  }
+  main .job .jon-container .box__table table tbody tr td {
+    font-size: 11px !important;
+  }
+  main .job .jon-container .box__table table tbody tr td a {
+    font-size: 11px;
+  }
+  main .job .jon-container .box__table table tbody tr td:before {
+    left: 5px !important;
+  }
+}
+@media screen and (max-width: 450px) {
+  main .benefit .benefit__container .benefit__carousel .slick-list .slick-track .benefit__carousel--item {
+    height: 200px;
+  }
 }/*# sourceMappingURL=recruitment.css.map */
